--- a/src/calculator.css
+++ b/src/calculator.css
@@ -1,12 +1,20 @@
+/* google font */
+@import url("https://fonts.googleapis.com/css2?family=Roboto:wght@100&display=swap");
+
 * {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
 }
 
-/* h2 {
-    border-top-style: solid;
-} */
+h2, h1 {
+    /* border-top-style: solid; */
+    font-family: "Roboto", sans-serif;
+}
+
+h2 {
+  margin-top: 10px;
+}
 
 .Calculator {
   box-shadow: 0 0 0 2rem skyblue;
@@ -16,4 +24,18 @@
   margin-top: 10%;
   width: 70%;
   padding: 5%;
+}
+
+.button {
+  background-color: skyblue;
+  border: none;
+  color: white;
+  padding: 15px 32px;
+  text-align: center;
+  text-decoration: none;
+  font-size: 16px;
+  border-radius: 20%;
+  display: inline-block;
+  margin: 5px 2px;
+  font-family: "Roboto", sans-serif;
 }
